main/default/objects/Purchase_History__c/Purchase_History__c.object-meta.xml
<CustomObject>
    <description>To Store the Order details</description>
    <label>Purchase History</label>
    <nameField>
        <displayFormat>Order-{0000}</displayFormat>
        <label>Purchase History</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>