main/default/objects/Purchase_History__c/fields/Engagement_Activity__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagement Activity</label>
    <referenceTo>Engagement_Activity__c</referenceTo>
    <relationshipLabel>Purchase Histories</relationshipLabel>
    <relationshipName>Purchase_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>