main/default/objects/Purchase_History__c/fields/List_Of_Products__c.field-meta.xml
<CustomField>
    <fullName>List_Of_Products__c</fullName>
    <description>To store the list of Products</description>
    <label>List Of Products</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>