main/default/objects/Purchase_History__c/fields/Loyalty_Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Earned__c</fullName>
    <formula>Order_Amount__c  / 100</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loyalty Points Earned</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>