main/default/objects/Purchase_History__c/fields/Loyalty_Points_Used__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Points_Used__c</fullName>
    <description>This Field Stores the Loyalty Points Used for that particular Purchase</description>
    <inlineHelpText>Loyalty Points Used for that particular Purchase</inlineHelpText>
    <label>Loyalty Points Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>