main/default/objects/Purchase_History__c/fields/Redeem_Points__c.field-meta.xml
<CustomField>
    <fullName>Redeem_Points__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox Option for Customer To Redeem the Loyalty Points</description>
    <label>Redeem Points</label>
    <type>Checkbox</type>
</CustomField>