main/default/objects/Purchase_History__c/validationRules/NoPoints_then_No_Redeem.validationRule-meta.xml
<ValidationRule>
    <fullName>NoPoints_then_No_Redeem</fullName>
    <active>true</active>
    <errorConditionFormula>And( Account__r.Loyalty_Points_Earned__c = 0.00, Redeem_Points__c =True)</errorConditionFormula>
    <errorDisplayField>Redeem_Points__c</errorDisplayField>
    <errorMessage>Points not available to Redeem</errorMessage>
</ValidationRule>