main/default/objects/Purchase_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Loyalty_Points_Earned__c</columns>
    <columns>Loyalty_Points_Used__c</columns>
    <columns>Order_Amount__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>Redeem_Points__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>