main/default/objects/Purchase_History__c/listViews/Purchase_History.listView-meta.xml
<ListView>
    <fullName>Purchase_History</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order_Amount__c</columns>
    <columns>Redeem_Points__c</columns>
    <columns>Total_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <label>Purchase History</label>
</ListView>